--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="sales_fragment_label">Sales</string>
     <string name="favorite_fragment_label">Favorite</string>
     <string name="settings_fragment_label">Settings</string>
-    <string name="details_fragment_label">Details Application</string>
+    <string name="details_fragment_label">Details</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
