--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="favorite_fragment_label">Favorite</string>
     <string name="settings_fragment_label">Settings</string>
     <string name="details_fragment_label">Details</string>
+    <string name="now_price">Now</string>
+    <string name="original_price">Original</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
